<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home" />

        <item
            android:id="@+id/myBusinessFragment"
            android:icon="@drawable/ic_business"
            android:title="@string/title_my_business" />

        <item
            android:id="@+id/creditScoreFragment"
            android:icon="@drawable/ic_credit_score"
            android:title="@string/title_credit_score" />

        <item
            android:id="@+id/accountFragment"
            android:icon="@drawable/ic_account"
            android:title="@string/title_account" />

    </group>

</menu>