<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.cabral.emaishapay.ui.fragments.EnterPinFragment.KeyPadListener" />

        <variable
            name="keyPadListener"
            type="KeyPadListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFDFF">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".66" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_1" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_2" />

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_3" />

        <View
            android:id="@+id/divider5"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guideline_4"
            app:layout_constraintStart_toStartOf="@+id/guideline_4"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider6"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guideline_5"
            app:layout_constraintStart_toStartOf="@+id/guideline_5"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/one"
            style="@style/KeyPad"
            android:onClick="@{()-> keyPadListener.onKeyClick(1)}"
            android:text="@string/one"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintEnd_toStartOf="@+id/divider5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/two"
            style="@style/KeyPad"
            android:onClick="@{()-> keyPadListener.onKeyClick(2)}"
            android:text="@string/two"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintEnd_toStartOf="@+id/divider6"
            app:layout_constraintStart_toStartOf="@+id/divider5"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/three"
            style="@style/KeyPad"
            android:onClick="@{()-> keyPadListener.onKeyClick(3)}"
            android:text="@string/three"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider6"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/four"
            style="@style/KeyPad"
            android:onClick="@{()-> keyPadListener.onKeyClick(4)}"
            android:text="@string/four"
            app:layout_constraintBottom_toTopOf="@+id/divider3"
            app:layout_constraintEnd_toStartOf="@+id/divider5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/five"
            style="@style/KeyPad"
            android:onClick="@{()-> keyPadListener.onKeyClick(5)}"
            android:text="@string/five"
            app:layout_constraintBottom_toTopOf="@+id/divider3"
            app:layout_constraintEnd_toStartOf="@+id/divider6"
            app:layout_constraintStart_toStartOf="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/six"
            style="@style/KeyPad"
            android:onClick="@{()-> keyPadListener.onKeyClick(6)}"
            android:text="@string/six"
            app:layout_constraintBottom_toTopOf="@+id/divider3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider6"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/seven"
            style="@style/KeyPad"
            android:onClick="@{()-> keyPadListener.onKeyClick(7)}"
            android:text="@string/seven"
            app:layout_constraintBottom_toTopOf="@+id/divider4"
            app:layout_constraintEnd_toStartOf="@+id/divider5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/eight"
            style="@style/KeyPad"
            android:onClick="@{()-> keyPadListener.onKeyClick(8)}"
            android:text="@string/eight"
            app:layout_constraintBottom_toTopOf="@+id/divider4"
            app:layout_constraintEnd_toStartOf="@+id/divider6"
            app:layout_constraintStart_toStartOf="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nine"
            style="@style/KeyPad"
            android:onClick="@{()-> keyPadListener.onKeyClick(9)}"
            android:text="@string/nine"
            app:layout_constraintBottom_toTopOf="@+id/divider4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider6"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/zero"
            style="@style/KeyPad"
            android:onClick="@{()-> keyPadListener.onKeyClick(0)}"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider6"
            app:layout_constraintStart_toStartOf="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <ImageButton
            android:id="@+id/delete_btn"
            style="@style/KeyPadButton"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <ImageButton
            android:id="@+id/done_btn"
            style="@style/KeyPadButton"
            android:contentDescription="@string/app_name"
            android:padding="20dp"
            android:src="@drawable/ic_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider6"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>