<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/register_padding"
        android:paddingEnd="@dimen/register_padding"
        tools:context=".ui.fragments.register.signup.SignUpFragment">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/full_name"
            android:textColor="@color/darkBlue_1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_full_name"
            style="@style/OutlinedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/full_name_hint"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_email_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email_address"
            android:textColor="@color/darkBlue_1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_full_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email_address"
            style="@style/OutlinedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_address_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            android:textColor="@color/darkBlue_1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_address" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/et_phone_layout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/slider_bg_with_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone_number">

            <ImageView
                android:id="@+id/country_flag"
                android:layout_width="44dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitStart"
                android:src="@drawable/ic_uganda"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_code"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/country_flag"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/country_code"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number_hint"
                    android:inputType="phone"
                    android:letterSpacing=".4"
                    android:maxLength="9"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/terms_and_condition_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@+id/terms_and_condition_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/terms_and_condition_tv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/terms_and_condition_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColorLink="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/terms_and_condition_checkbox"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_layout"
            app:prepareTermsAndConditions="@{true}"
            tools:text="@tools:sample/lorem" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_btn"
            style="@style/MaterialFilledButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/create_account"
            app:cornerRadius="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/terms_and_condition_tv"
            app:layout_constraintWidth_percent=".8" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textColor="@color/darkBlue_3"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sign_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_in"
            android:textColor="@color/primaryColor"
            android:textSize="16sp" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:constraint_referenced_ids="textView,sign_in_tv"
            app:flow_horizontalGap="8dp"
            app:flow_horizontalStyle="packed"
            app:flow_wrapMode="aligned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>