<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/register_padding"
        android:paddingEnd="@dimen/register_padding"
        tools:context=".ui.fragments.FragmentSendEmail">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/layout_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        bind:title="@{@string/back}" />
        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/register_padding"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/darkGrey" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_send_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/send_email"
        android:textColor="@color/darkBlue_1"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_email_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_title_margin_top"
            android:text="@string/description"
            android:textColor="@color/darkBlue_1"
            android:textSize="@dimen/edit_text_title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_send_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email_description"
            style="@style/OutlinedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Enter Text"
                android:gravity="top"
                android:textAlignment="gravity"
                android:inputType="textLongMessage|textMultiLine"
                android:textColor="@color/black"
                android:textSize="@dimen/edit_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_email_button"
            style="@style/MaterialFilledButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/send_email"
            android:textStyle="bold"
            app:cornerRadius="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_description" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>